--- a/aboutpage.html
+++ b/aboutpage.html
@@ -49,8 +49,7 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>My Portfolio</h1>
-    <p>Some text that represents "Me"...</p>
+    <p>Launchpad Events</p>
   </div>
 </div>
 
