--- a/aboutpage.html
+++ b/aboutpage.html
@@ -58,20 +58,20 @@
   <h3>Our Team </h3><br>
   <div class="row">
     <div class="col-sm-3">
-      <p>Chair</p>
-      <img src="img/kristina.jpg" class="img-responsive team-photo" alt="kristinaimage">
+      <p>Chair - Kristina </p>
+      <img src="aboutpage/img/kristina.jpg" class="img-responsive team-photo" alt="kristinaimage">
     </div>
     <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Vice Chair - Alex </p>
+      <img src="aboutpage/img/alex.jpg" class="img-responsive team-photo" style="width:100%" alt="aleximage">
     </div>
     <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Marketing - Marysia</p>
+      <img src="aboutpage/img/marysia.jpg" class="img-responsive team-photo" style="width:100%" alt="marysiaimage">
     </div>
     <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Treasurer - Malena </p>
+      <img src="aboutpage/img/malena.jpg" class="img-responsive team-photo" style="width:100%" alt="malenaimage">
     </div>
   </div>
 </div><br>
