--- a/aboutpage.html
+++ b/aboutpage.html
@@ -78,8 +78,13 @@
   </div>
 </div><br>
 <footer class="container-fluid text-center">
-  <img class=
-  <p>Footer Text</p>
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-google"></a>
+  <a href="#" class="fa fa-linkedin"></a>
+  <a href="#" class="fa fa-youtube"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <p>Connect with us on social media</p>
 </footer>
 
 </body>
