--- a/aboutpage.html
+++ b/aboutpage.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <meta name="viewport" content= "width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="css/aboutpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -50,9 +51,8 @@
 </nav>
 
 <div class="jumbotron">
-  <div class="container text-center">
-    <p>Launchpad Events</p>
-      <img src="aboutpage/img/banner.jpg" class="img-responsive" alt="bannerimage">
+      <img src="aboutpage/img/banner.jpg" alt="bannerimage">
+      <div class="wrapper">
   </div>
 </div>
 
