testing responsive site
for iphone 6

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -51,10 +51,9 @@
 </nav>
 
 <div class="jumbotron">
-      <img src="aboutpage/img/banner.jpg" alt="bannerimage">
+      <img src="" alt="bannerimage">
       <div class="wrapper">
   </div>
-</div>
 
 <div class="container-fluid bg-3 text-center">
   <h3>Our Team </h3><br>
