new banner image
from stock

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -51,7 +51,7 @@
 </nav>
 
 <div class="jumbotron">
-      <img src="" alt="bannerimage">
+      <img class="img-banner" src="banner.jpg" alt="bannerimage">
       <div class="wrapper">
   </div>
 
