redoing footer icons
the first one didnt scale very nice

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -50,9 +50,8 @@
   </div>
 </nav>
 
-<div class="jumbotron">
-      <img class="img-banner" src="banner.jpg" alt="bannerimage">
-      <div class="wrapper">
+<div class="container">
+      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage">
   </div>
 
 <div class="container-fluid bg-3 text-center">
@@ -76,7 +75,15 @@
     </div>
   </div>
 </div><br>
-<footer class="container-fluid text-center">
+<div class="footer-main-div"> </div>
+
+<div class="s">
+  <ul>
+    <li><a href="#" target= "blank"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="#" target= "blank"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="#" target= "blank"><i class="fa fa-linkedin"></i></a></li>
+  <u/l>
+
   <a href="#" class="fa fa-facebook"></a>
   <a href="#" class="fa fa-linkedin"></a>
   <a href="#" class="fa fa-instagram"></a>
