tried to make footer bigger

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -50,7 +50,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="jumbotron">
       <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage">
   </div>
 
@@ -75,15 +75,7 @@
     </div>
   </div>
 </div><br>
-<div class="footer-main-div"> </div>
-
-<div class="s">
-  <ul>
-    <li><a href="#" target= "blank"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="#" target= "blank"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#" target= "blank"><i class="fa fa-linkedin"></i></a></li>
-  <u/l>
-
+<footer class="container-fluid text-center">
   <a href="#" class="fa fa-facebook"></a>
   <a href="#" class="fa fa-linkedin"></a>
   <a href="#" class="fa fa-instagram"></a>
