tried working on banner
Didnt work

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -52,6 +52,7 @@
 
 <div class="jumbotron">
       <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage">
+      <div class="wrapper">
   </div>
 
 <div class="container-fluid bg-3 text-center">
