--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <head>
 
     <title>Bath Entrepreneurs</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css"
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -14,7 +13,12 @@
   </head>
 
   <body>
+    <!-- CSS link (including Google API font and search bar) -->
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Navbar starts -->
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -26,51 +30,84 @@
           <a class="navbar-brand" href="#">BE</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Contact</a></li>
+            <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
+              <input type="text" placeholder="Search..." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form></li>
           </ul>
-          <ul class="nav navbar-nav navbar-center">
-          </ul>
+
         </div>
       </div>
     </nav>
 
-    <div class="jumbotron">
-      <div class="container text-center">
-        <h1>Carousel</h1>
-        <p>This is an event</p>
+    <!-- Carousel starts -->
+    <div<div class="container" id="2">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="carousel1.png" alt="LaunchPad" style="width:100%;">
+            <div class="text">LaunchPad</div>
+          </div>
+
+          <div class="item">
+            <img src="carousel2.png" alt="BE2 Conference" style="width:100%;">
+            <div class="text">BE2 Conference</div>
+          </div>
+
+          <div class="item">
+            <img src="carousel3.png" alt="An Evening with Bath Entrepreneurs" style="width:100%;">
+            <div class="text">An Evening with Bath Entrepreneurs</div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
 
-    <div class="container-fluid bg-3 text-center">
-      <h3>Partners</h3><br>
-      <div class="row">
-        <div class="col-sm-3">
-          <p>Some text..</p>
-          <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-        </div>
-        <div class="col-sm-3">
-          <p>Some text..</p>
-          <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-        </div>
-        <div class="col-sm-3">
-          <p>Some text..</p>
-          <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-        </div>
-        <div class="col-sm-3">
-          <p>Some text..</p>
-          <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-        </div>
-      </div>
-    </div><br>
 
+        <div class="container-fluid bg-3 text-center" id="3">
+          <h3>Partners</h3><br>
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="partner1.png" class="img-responsive" style="width:100%" alt="ACME Corporation">
+            </div>
+            <div class="col-sm-3">
+              <img src="partner2.png" class="img-responsive" style="width:100%" alt="Stark Industries">
+            </div>
+            <div class="col-sm-3">
+              <img src="partner3.png" class="img-responsive" style="width:100%" alt="Globex Corporation">
+            </div>
+            <div class="col-sm-3">
+              <img src="partner4.png" class="img-responsive" style="width:100%" alt="Wayne Enterprises">
+            </div>
+          </div>
+        </div><br>
 
-    <footer class="container-fluid text-center">
-      <p>Contact</p>
-    </footer>
+        <footer class="container-fluid text-center">
+          <p>Contact</p>
+        </footer>
+
 
   </body>
 </html>
