--- a/aboutpage.html
+++ b/aboutpage.html
@@ -53,7 +53,7 @@
 </nav>
 
 <div class="jumbotron">
-      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage">
+      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="widt:100%;"> 
       <div class="wrapper">
   </div>
 
