added div container

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -52,8 +52,8 @@
   </div>
 </nav>
 
-<div class="jumbotron">
-      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="widt:100%;"> 
+<div class="container">
+      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="widt:100%;">
       <div class="wrapper">
   </div>
 
