--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
           </div>
         </div><br>
 
-        <footer class="container-fluid text-center">
-          <p>Contact</p>
-        </footer>
+
+          <footer class="container-fluid text-center">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <p>Connect with us on social media</p>
+          </footer>
 
 
   </body>
