--- a/aboutpage.html
+++ b/aboutpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -16,6 +16,33 @@
       margin-bottom: 0;
       border-radius: 0;
     }
+
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">BE</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
+              <input type="text" placeholder="Search..." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form></li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+
 
     /* Add a gray background color and some padding to the footer */
     footer {
@@ -52,9 +79,10 @@
   </div>
 </nav>
 
+
 <div class="container">
-      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="widt:100%;">
-      <div class="wrapper">
+    <div class="item active">
+      <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="width:100%;">
   </div>
 
 <div class="container-fluid bg-3 text-center">
