updated index html

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">BE</a>
+          <a class="navbar-brand" id="BE" href="#">BE</a>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
+        <div class="collapse navbar-collapse" id="navbar">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- Carousel starts -->
-    <div<div class="container" id="2">
+    <div<div class="container" id="carousel">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -85,8 +85,8 @@
       </div>
     </div>
 
-
-        <div class="container-fluid bg-3 text-center" id="3">
+<!-- Partners -->
+        <div class="container-fluid bg-3 text-center" id="partners">
           <h3>Partners</h3><br>
           <div class="row">
             <div class="col-sm-3">
@@ -102,9 +102,34 @@
               <img src="partner4.png" class="img-responsive" style="width:100%" alt="Wayne Enterprises">
             </div>
           </div>
-        </div><br>
+        </div><br><br>
+
+<!-- Contact -->
+        <div class="container-fluid bg-3 text-center" id="contact">
+          <h3>Contact us</h3><br>
+          <div class="row">
+
+            <div class="col-sm-4">
+              <p>Become a member</p>
+              <a href="https://www.thesubath.com/bath-entrepreneurs/"><img src="contactus1.png" class="img-responsive" style="width:100%" height="300px" alt="Join Us"></a>
+            </div>
+
+            <div class="col-sm-4">
+              <p>Drop us a question</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeC4ABIfl4mTYlHTOTTPe88YtTPrDICIhlNCTByEBRKmsh90A/viewform?embedded=true" width="100%" height="300px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</div>
+
+            <div class="col-sm-4">
+              <p>Find us</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.3512147377032!2d-2.3285873846926872!3d51.37822277961408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487181bb49a7bfd7%3A0x842e7cc0699da7e7!2sUniversity+of+Bath!5e0!3m2!1sen!2suk!4v1554147359380!5m2!1sen!2suk" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+            </div>
+          </div><br><br>
 
 
+
+
+<!-- Footer -->
           <footer class="container-fluid text-center">
             <p>Connect with us on social media</p>
             <a href="#" class="fa fa-facebook"></a>
