updated index code

--- a/index.html
+++ b/index.html
@@ -19,34 +19,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Navbar starts -->
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" id="BE" href="#">BE</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
-              <input type="text" placeholder="Search..." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </form></li>
-          </ul>
 
-        </div>
-      </div>
-    </nav>
+
+    <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">BE</a>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
+          <input type="text" placeholder="Search..." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
     <!-- Carousel starts -->
-    <div<div class="container" id="carousel">
+    <div class="container" id="carousel">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -58,18 +59,18 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="carousel1.png" alt="LaunchPad" style="width:100%;">
-            <div class="text">LaunchPad</div>
+            <a href="https://www.facebook.com/events/university-of-bath/launchpad-bath-2018/183240139113992/"><img src="carousel1.png" alt="LaunchPad" style="width:100%;">
+            <div class="text">LaunchPad</div></a>
           </div>
 
           <div class="item">
-            <img src="carousel2.png" alt="BE2 Conference" style="width:100%;">
-            <div class="text">BE2 Conference</div>
+<a href="https://www.facebook.com/events/bathentrepreneurs/be2-entrepreneurship-conference/649247865242375/"><img src="carousel2.png" alt="BE2 Conference" style="width:100%;">
+            <div class="text">BE2 Conference</div></a>
           </div>
 
           <div class="item">
-            <img src="carousel3.png" alt="An Evening with Bath Entrepreneurs" style="width:100%;">
-            <div class="text">An Evening with Bath Entrepreneurs</div>
+          <a href="https://www.facebook.com/events/2318692461700694/"><img src="carousel3.png" alt="An Evening with Bath Entrepreneurs" style="width:100%;">
+            <div class="text">An Evening with Bath Entrepreneurs</div></a>
           </div>
         </div>
 
@@ -90,16 +91,16 @@
           <h3>Partners</h3><br>
           <div class="row">
             <div class="col-sm-3">
-              <img src="partner1.png" class="img-responsive" style="width:100%" alt="ACME Corporation">
+              <a href="https://www.google.co.uk/"><img src="partner1.png" class="img-responsive" style="width:100%" alt="ACME Corporation"></a>
             </div>
             <div class="col-sm-3">
-              <img src="partner2.png" class="img-responsive" style="width:100%" alt="Stark Industries">
+              <a href="https://www.google.co.uk/"><img src="partner2.png" class="img-responsive" style="width:100%" alt="Stark Industries"></a>
             </div>
             <div class="col-sm-3">
-              <img src="partner3.png" class="img-responsive" style="width:100%" alt="Globex Corporation">
+              <a href="https://www.google.co.uk/"><img src="partner3.png" class="img-responsive" style="width:100%" alt="Globex Corporation"></a>
             </div>
             <div class="col-sm-3">
-              <img src="partner4.png" class="img-responsive" style="width:100%" alt="Wayne Enterprises">
+              <a href="https://www.google.co.uk/"><img src="partner4.png" class="img-responsive" style="width:100%" alt="Wayne Enterprises"></a>
             </div>
           </div>
         </div><br><br>
@@ -131,10 +132,10 @@
 
 <!-- Footer -->
           <footer class="container-fluid text-center">
-            <p>Connect with us on social media</p>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-instagram"></a>
+            <h3>Connect with us on social media</h3><br>
+            <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
+            <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
+            <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
           </footer>
 
 
