--- a/aboutpage.html
+++ b/aboutpage.html
@@ -5,46 +5,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <meta name="viewport" content= "width=device-width, intial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 
 </head>
 <body>
-    <link rel="stylesheet" href="css/aboutpage.css">
+
+      <!-- CSS link -->
+  <link rel="stylesheet" href="css/aboutpage.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <nav class="navbar navbar-inverse">
+
+    <!-- Navbar starts -->
+    <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">BE</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
-            <input type="text" placeholder="Search..." name="search">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form></li>
-        </ul>
-
-      </div>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">BE</a>
     </div>
-  </nav>
-
-
-
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
+          <input type="text" placeholder="Search..." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form></li>
+      </ul>
+    </div>
+    </div>
+    </nav>
 
 
 
@@ -54,7 +54,10 @@
   </div>
 
 <div class="container-fluid bg-3 text-center" id="aboutus">
-  <h3> About Us <h3><br>
+  <h3> About Us <h3>
+  </div>
+
+  <div class="container-fluid bg-3 text-center" id="abouttext">
   <p> Bath Entrepreneurs is a student group welcoming and uniting all student entrepreneurs at Bath. We provide extraordinary networking, learning, and funding opportunities. </p>
     </div><br>
 
@@ -78,16 +81,16 @@
       <p>Treasurer - Malena </p>
       <img src="aboutpage/img/malena.jpg" class="img-responsive team-photo" style="width:100%" alt="malenaimage">
     </div>
-  </div>
-</div><br>
-<footer class="container-fluid text-center">
+</div><br><br>
 
-  <p>Connect with us on social media</p>
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-instagram"></a>
+    <!-- Footer -->
+              <footer class="container-fluid text-center">
+                <h3>Connect with us on social media</h3><br>
+                <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
+                <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
+                <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
+              </footer>
 
-</footer>
 
 </body>
 </html>
