--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">BE</a>
+      <a class="navbar-brand" href="#" img src="logo.png" style="width:100%;"></a>
     </div>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
