added link to about page

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -33,7 +33,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
+        <li><a href="https://thaoha2512.github.io/group-project2/">Home</a></li>
         <li class="active"><a href="#">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
