--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="https://github.com/thaoha2512/group-project2/blob/master/aboutpage.html">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
         <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
