--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="https://github.com/thaoha2512/group-project2/blob/master/aboutpage.html">About</a></li>
+        <li class="active"><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
+        <li><a href="https://thaoha2512.github.io/group-project2/aboutpage.html">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
         <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
