got rid of error in code with (.html) at end of link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
-        <li><a href="https://thaoha2512.github.io/group-project2/aboutpage.html">About</a></li>
+        <li><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
         <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
