--- a/aboutpage.html
+++ b/aboutpage.html
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://thaoha2512.github.io/group-project2/">Home</a></li>
-        <li class="active"><a href="#">About</a></li>
+        <li class="active"><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Contact</a></li>
         <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
