--- a/index.html
+++ b/index.html
@@ -2,61 +2,58 @@
 <html lang="en">
 
   <head>
-
     <title>Bath Entrepreneurs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
   </head>
 
   <body>
+
     <!-- CSS link  -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Navbar starts -->
-
-
     <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">BE</a>
-    </div>
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
-        <li><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
-          <input type="text" placeholder="Search..." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </form></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+      <div class="container-fluid"
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">BE</a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
+          <li><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
+            <input type="text" placeholder="Search..." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form></li>
+        </ul>
+      </div>
+      </div>
+    </nav>
 
-    <!-- Carousel starts -->
+    <!-- Carousel -->
     <div class="container" id="carousel">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
+        <!-- Carousel: Indicators -->
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
 
-        <!-- Wrapper for slides -->
+        <!-- Carousel: Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
             <a href="https://www.facebook.com/events/university-of-bath/launchpad-bath-2018/183240139113992/"><img src="carousel1.png" alt="LaunchPad" style="width:100%;">
@@ -64,17 +61,17 @@
           </div>
 
           <div class="item">
-<a href="https://www.facebook.com/events/bathentrepreneurs/be2-entrepreneurship-conference/649247865242375/"><img src="carousel2.png" alt="BE2 Conference" style="width:100%;">
+            <a href="https://www.facebook.com/events/bathentrepreneurs/be2-entrepreneurship-conference/649247865242375/"><img src="carousel2.png" alt="BE2 Conference" style="width:100%;">
             <div class="text">BE2 Conference</div></a>
           </div>
 
           <div class="item">
-          <a href="https://www.facebook.com/events/2318692461700694/"><img src="carousel3.png" alt="An Evening with Bath Entrepreneurs" style="width:100%;">
+            <a href="https://www.facebook.com/events/2318692461700694/"><img src="carousel3.png" alt="An Evening with Bath Entrepreneurs" style="width:100%;">
             <div class="text">An Evening with Bath Entrepreneurs</div></a>
           </div>
         </div>
 
-        <!-- Left and right controls -->
+        <!-- Carousel: Left and right controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left"></span>
           <span class="sr-only">Previous</span>
@@ -86,24 +83,20 @@
       </div>
     </div>
 
-<!-- Partners -->
-        <div class="container-fluid bg-3 text-center" id="partners">
-          <h3>Partners</h3><br>
-          <div class="row">
-            <div class="col-sm-3">
-              <a href="https://www.google.co.uk/"><img src="partner1.png" class="img-responsive" style="width:100%" alt="ACME Corporation"></a>
-            </div>
-            <div class="col-sm-3">
-              <a href="https://www.google.co.uk/"><img src="partner2.png" class="img-responsive" style="width:100%" alt="Stark Industries"></a>
-            </div>
-            <div class="col-sm-3">
-              <a href="https://www.google.co.uk/"><img src="partner3.png" class="img-responsive" style="width:100%" alt="Globex Corporation"></a>
-            </div>
-            <div class="col-sm-3">
-              <a href="https://www.google.co.uk/"><img src="partner4.png" class="img-responsive" style="width:100%" alt="Wayne Enterprises"></a>
-            </div>
-          </div>
-        </div><br><br>
+    <!-- Partners -->
+    <div class="container-fluid bg-3 text-center" id="partners">
+      <h3>Partners</h3><br>
+      <div class="row">
+        <div class="col-sm-3">
+          <a href="https://www.google.co.uk/"><img src="partner1.png" class="img-responsive" style="width:100%" alt="ACME Corporation"></a></div>
+        <div class="col-sm-3">
+          <a href="https://www.google.co.uk/"><img src="partner2.png" class="img-responsive" style="width:100%" alt="Stark Industries"></a></div>
+        <div class="col-sm-3">
+          <a href="https://www.google.co.uk/"><img src="partner3.png" class="img-responsive" style="width:100%" alt="Globex Corporation"></a></div>
+        <div class="col-sm-3">
+          <a href="https://www.google.co.uk/"><img src="partner4.png" class="img-responsive" style="width:100%" alt="Wayne Enterprises"></a></div>
+      </div>
+    </div><br><br>
 
 <!-- Contact -->
         <div class="container-fluid bg-3 text-center" id="contact">
