updated index and fixed icon button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">BE</a>
+      <a class="navbar-brand" href="https://thaoha2512.github.io/group-project2"> <img src="logo.png"> </a>
     </div>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
