--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <div class="row">
                     <div class="col-sm-4">
                       <p>Become a member</p>
-                      <a href="https://www.thesubath.com/bath-entrepreneurs/"><img src="contactus1.png" class="img-responsive" style="width:100%" height="300px" alt="Join Us"></a>
+                      <a href="https://www.thesubath.com/bath-entrepreneurs/"><img src="contactus1.png" class="img-responsive" style=width:"100%" height="300px" alt="Join Us"></a>
                     </div>
                     <div class="col-sm-4">
                       <p>Drop us a question</p>
