--- a/aboutpage.html
+++ b/aboutpage.html
@@ -29,7 +29,7 @@
         </button>
         <a class="navbar-brand" href="https://thaoha2512.github.io/group-project2"> <img src="logo.png"> </a>
       </div>
-      <div class="collapse navbar-collapse" id="navbar">
+    <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
           <li class="active"><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
@@ -44,11 +44,12 @@
     </div>
   </nav>
 
+  <!-- Banner starts -->
   <div class="container">
     <div class="item active">
       <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="width:100%;">
     </div>
-
+  <!-- About us -->
     <div class="container-fluid bg-3 text-center" id="aboutus">
       <h3> About Us <h3>
       </div>
@@ -57,10 +58,9 @@
         <p> Bath Entrepreneurs is a student group welcoming and uniting all student entrepreneurs at Bath.
         </p>
         <p> We provide extraordinary networking, learning, and funding opportunities.</p>
-
       </div><br>
 
-
+  <!-- our team-->
       <div class="container-fluid bg-3 text-center" id="team">
         <h3>Our Team </h3><br>
         <div class="row">
@@ -82,14 +82,14 @@
           </div>
         </div><br><br>
 
-        <!-- Footer -->
-        <footer class="container-fluid text-center">
-          <h3>Connect with us on social media</h3><br>
-          <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
-          <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
-          <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
-        </footer>
+<!-- Footer -->
+  <footer class="container-fluid text-center">
+    <h3>Connect with us on social media</h3><br>
+      <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
+      <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
+  </footer>
 
 
-      </body>
-      </html>
+</body>
+</html>
